--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Статистика учёта рабочего времени сотрудников отдела СТС ПРЦНИТ СГУ</title>
+    <title>Статистика учёта рабочего времени</title>
     <link type="text/css" rel="stylesheet" href="/static/css/bootstrap.min.css">
     <link type="text/css" rel="stylesheet" href="/static/css/ripples.min.css">
     <link type="text/css" rel="stylesheet" href="/static/css/bootstrap-material-design.min.css">
@@ -51,13 +51,13 @@
     <div class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="/statistics/">Statistics</a>
+                <a class="navbar-brand" href="/">Statistics</a>
             </div>
             <div class="nav navbar-nav">
-                <li><a href="/statistics/">Current week</a></li>
-                <li><a href="/statistics/{{.PrevDate}}">{{.PrevDate}}</a></li>
-                <li class="active"><a href="/statistics/{{.CurrentDate}}">{{.CurrentDate}}</a></li>
-                <li><a href="/statistics/{{.NextDate}}">{{.NextDate}}</a></li>
+                <li><a href="/statistics/{{.Keyword}}/">Current week</a></li>
+                <li><a href="/statistics/{{.Keyword}}/{{.PrevDate}}">{{.PrevDate}}</a></li>
+                <li class="active"><a href="/statistics/{{.Keyword}}/{{.CurrentDate}}">{{.CurrentDate}}</a></li>
+                <li><a href="/statistics/{{.Keyword}}/{{.NextDate}}">{{.NextDate}}</a></li>
             </div>
         </div>
     </div>
